[package]
name = "chash"
version = "0.1.0"
authors = ["Ashkan Kiani <ashkan.k.kiani@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.43"
# clang = { version = "1.0.3", features = ["static"] }
clang = "1.0.3"
itertools = "0.10.1"
parse-display = "0.5.1"
