[package]
name = "chash"
version = "0.1.0"
authors = ["Ashkan Kiani <ashkan.k.kiani@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.43"
# clang = { version = "1.0.3", features = ["static"] }
clang = "1.0.3"
env_logger = "0.9.0"
indexmap = "1.7.0"
itertools = "0.10.1"
log = "0.4.14"
parse-display = "0.5.1"
regex = "1.5.4"
